Closed Bug 1554610 Opened 5 years ago Closed 4 years ago

Single pixel (white/black) hole in top left window corner on Windows 10 with double buffering and Basic compositor

Categories

(Core :: Graphics: Layers, defect, P3)

68 Branch
Unspecified
Windows 10
defect

Tracking

()

RESOLVED FIXED
mozilla75
Tracking Status
firefox-esr60 --- unaffected
firefox-esr68 --- unaffected
firefox67 --- unaffected
firefox67.0.1 --- unaffected
firefox68 --- wontfix
firefox69 --- wontfix
firefox73 --- disabled
firefox74 --- disabled
firefox75 --- fixed

People

(Reporter: ke5trel, Assigned: sotaro)

References

(Regression)

Details

(Keywords: polish, regression)

Attachments

(2 files)

Flags: needinfo?(bas)
Priority: -- → P3

Copying Bas' comment from bug 1555956 comment #11:

My best guess here is that this is a debug feature in VirtualBox that is accidentally leaking in somewhere, they might put some kind of debugging info for their graphics driver development for double buffering in that single pixel. The easiest solution in my mind would be to disable double buffering on VirtualBox, or for that matter, perhaps blacklist it by default altogether, I'm not certain they win much by it.

It's not limited to VirtualBox, I've also seen it on an ancient netbook device.

Bas, were you able to reproduce this in VirtualBox?

This affects Firefox on my notebook with first-generation Intel HD Graphics and hardware acceleration disabled manually.

Mozilla/5.0 (Windows NT 10.0; Win64; x64; rv:72.0) Gecko/20100101 Firefox/72.0

"Hide my Email", to confirm, you only see the problem with hardware acceleration disabled?

Flags: needinfo?(emailmeat)

The answer is yes.

I had mentioned it just to say that I wasn't even trying to use hardware acceleration, since I assumed it wouldn't do anything on such an old graphics chip anymore, and I had problems with it back when it was first implemented.

However, after your question I checked "Use hardware acceleration when available" and the annoying pixel was gone.

Flags: needinfo?(emailmeat)

I can confirm this only happens with hardware acceleration disable (Basic compositor, layers.acceleration.disabled = true) and can be worked around by disabling double buffering (gfx.direct3d11.use-double-buffering = false).

Blocks: 1580222
Summary: Single pixel hole in top left window corner on Windows 10, can appear white or black → Single pixel (white/black) hole in top left window corner on Windows 10 with double buffering and Basic compositor

Double buffering was disabled on beta by Bug 1610912.

Depends on: 1610912
See Also: → 1598126

When BasicCompositor is used, BasicCompositor does not use CompositorWindow. Then CompositorWindow exists as initial one pixel size.

Assignee: nobody → sotaro.ikeda.g
Pushed by sikeda.birchill@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/d780e5d16e4f
Destroy CompositorWindow if BasicCompositor is used r=nical
Status: NEW → RESOLVED
Closed: 4 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla75
QA Whiteboard: [qa-75b-p2]
Flags: needinfo?(bas)
Has Regression Range: --- → yes
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: