Bug 1554610 - Destroy CompositorWindow if BasicCompositor is used r=nical

When BasicCompositor is used, BasicCompositor does not use CompositorWindow.

Differential Revision: https://phabricator.services.mozilla.com/D61345